// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`andThen failure 1 1`] = `
Fail {
  "context": Context {
    "index": 1,
    "input": "x",
  },
  "messages": Array [
    "y",
  ],
}
`;

exports[`andThen failure 2 1`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "y",
  },
  "messages": Array [
    "x",
  ],
}
`;

exports[`andThen failure 3 1`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "yx",
  },
  "messages": Array [
    "x",
  ],
}
`;

exports[`andThen failure 4 1`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "",
  },
  "messages": Array [
    "x",
  ],
}
`;

exports[`andThen success 1`] = `
OK {
  "context": Context {
    "index": 2,
    "input": "xy",
  },
  "value": Array [
    "x",
    "y",
  ],
}
`;

exports[`matchEOF failure 1`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "x",
  },
  "messages": Array [
    "end of file",
  ],
}
`;

exports[`matchEOF success 1`] = `
OK {
  "context": Context {
    "index": 0,
    "input": "",
  },
  "value": "end of file",
}
`;

exports[`matchRegExp failure 1`] = `
Fail {
  "context": Context {
    "index": 0,
    "input": "abc",
  },
  "messages": Array [
    "/\\\\d+/",
  ],
}
`;

exports[`matchRegExp success 1`] = `
OK {
  "context": Context {
    "index": 2,
    "input": "12",
  },
  "value": "12",
}
`;

exports[`test a test 1`] = `
OK {
  "context": Context {
    "index": 1,
    "input": "x",
  },
  "value": "x",
}
`;
